--- a/lesson_3/css/style.css
+++ b/lesson_3/css/style.css
@@ -1,3 +1,25 @@
+@import url(reset.css);
+
+h1 {
+    height: 40px;
+    margin: 15px 0;
+    border-bottom: 1px solid black;
+}
+h2, h3, h4 {
+    height: 40px;
+    margin: 10px 0;
+}
+h2 {
+    border-bottom: 1px solid black;
+}
+p, li {
+    margin-bottom: 10px;
+    letter-spacing: 0.5px;
+    line-height: 18px;
+}
+li {
+    margin-left: 20px;
+}
 .container-img {
     max-width: 1170px;
     margin: 0 auto;
