--- a/lesson_4/css/reset.css
+++ b/lesson_4/css/reset.css
@@ -1,113 +1,33 @@
-* {
-    padding: 0;
-    margin: 0;
-    border: 0;
-}
-
 *,
-*:before,
-*:after {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+*::before,
+*::after {
+	padding: 0;
+	margin: 0;
+	border: 0;
+	box-sizing: border-box;
 }
-
-:focus,
-:active {
-    outline: none;
+a {
+	text-decoration: none;
+	color: inherit;
 }
-
-a:focus,
-a:active {
-    outline: none;
+ul,
+li {
+	list-style: none;
 }
-
-nav,
-footer,
-header,
-aside {
-    display: block;
-}
-
-html,
-body {
-    height: 100%;
-    width: 100%;
-    font-style: 100%;
-    line-height: 1;
-    font-style: 14px;
-}
-
-input,
-button,
-textarea {
-    font-family: inherit;
-}
-
-input::-ms-clear {
-    display: none;
-}
-
-button {
-    cursor: pointer;
-}
-
-button::-moz-focus-inner {
-    padding: 0;
-    border: 0;
-}
-
-a,
-a:visited {
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: none;
-}
-
-ul li {
-    list-style-type: none;
-}
-ol {
-    list-style-type: none;
-}
-
 img {
-    vertical-align: top;
+	vertical-align: top;
 }
-
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-    font-style: inherit;
-    font-weight: 400;
+	font-weight: inherit;
+	font-size: inherit;
 }
-
+html,
 body {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.change__photos {
-    width: 300px;
-}
-.change__photos .change__photo img {
-    width: 100%;
-    height: 100%;
-    -o-object-fit: cover;
-    object-fit: cover;
-}
-.change__photos .change__photo:nth-of-type(2) {
-    display: none;
-}
-.change__photos:hover .change__photo:nth-of-type(1) {
-    display: none;
-}
-.change__photos:hover .change__photo:nth-of-type(2) {
-    display: block;
-}
-.change__photos:hover {
-    cursor: pointer;
+	line-height: 1;
+	height: 100%;
 }
