--- a/lesson_7/css/style.css
+++ b/lesson_7/css/style.css
@@ -1,101 +1,102 @@
 @import url(reset.css);
 @import url(fonts.css);
 
-body{
+body {
     font-family: "Inter", sans-serif;
     font-size: 18px;
     color: #7d7d7d;
     width: auto;
 }
 
-.wrapper{
+.wrapper {
     max-width: 1248px;
     margin: 0 auto;
     padding: 50px 15px;
 }
 
 .header,
-.footer{
+.footer {
     text-align: center;
 }
-.nav li{
+.nav li {
     display: inline-block;
 }
-.logo{
+.logo {
     width: 80px;
     border-radius: 5px;
-    box-shadow: 7px 7px 5.6px rgba(48, 28, 28, 0.115), 3px 10px 6px rgba(21, 34, 133, 0.115);
+    box-shadow: 7px 7px 5.6px rgba(48, 28, 28, 0.115),
+        3px 10px 6px rgba(21, 34, 133, 0.115);
 }
-.nav a{
+.nav a {
     color: mediumslateblue;
     font-size: 40px;
     font-weight: 700;
     letter-spacing: 3px;
     margin-right: 15px;
-    outline: 4px double  #3e7f6f;
+    outline: 4px double #3e7f6f;
     display: inline-block;
     vertical-align: middle;
     text-shadow: 5px 5px 5px #a19a9a, 7px 7px 7px #a7b072;
 }
 /* =============licencing=============== */
-.subtitle{
+.subtitle {
     margin: 0 auto;
     padding: 150px 0 70px;
     text-align: center;
 }
-.square-block{
+.square-block {
     margin-bottom: 22px;
 }
 .square {
     width: 12px;
     height: 12px;
-    background: #40DDB6;
+    background: #40ddb6;
     display: inline-block;
 }
-.square-text{
+.square-text {
     display: inline-block;
-    color: #37393F;
+    color: #37393f;
     font-weight: 500;
     vertical-align: center;
 }
 h2,
 h3,
-h4{
-    font-family: 'Poppins',sans-serif;
+h4 {
+    font-family: "Poppins", sans-serif;
     font-weight: 700;
-    color: #37393F;
+    color: #37393f;
 }
-.subtitle h2{
+.subtitle h2 {
     font-size: 60px;
     line-height: 1.21;
 }
-h3{
+h3 {
     font-size: 40px;
     line-height: 1.21;
     margin-bottom: 11px;
 }
-p{
+p {
     line-height: 1.46;
 }
-.text{
+.text {
     margin-bottom: 32px;
 }
-.content{
+.content {
     margin-bottom: 100px;
 }
 .lead {
     font-size: 30px;
     margin-bottom: 12px;
 }
-.accent{
-    color: #40DDB6;
+.accent {
+    color: #40ddb6;
     font-weight: 400;
 }
-.text-green{
-    color: #40DDB6;
+.text-green {
+    color: #40ddb6;
 }
-.fonts span{
-    color: #40DDB6;
+.fonts span {
+    color: #40ddb6;
     font-weight: 500;
 }
 
@@ -103,18 +104,17 @@ p{
 .projekt {
     max-width: 830px;
     margin: 0 auto 100px;
-
 }
 .projekt__title {
-    font-family: 'Poppins',sans-serif;
+    font-family: "Poppins", sans-serif;
     font-weight: 700;
-    color: #37393F;
+    color: #37393f;
     line-height: 1.27;
     font-size: 40px;
     margin-bottom: 13px;
 }
 .projekt p {
-    margin-bottom: 35px;  
+    margin-bottom: 35px;
 }
 [class*="list"] {
     padding-left: 44px;
@@ -126,26 +126,26 @@ p{
     list-style: disc;
     padding-left: 5px;
 }
-.list-nummered .list__item{
+.list-nummered .list__item {
     list-style: decimal-leading-zero;
 }
 
 /* ========== Clothing =============*/
-.clothing{
+.clothing {
     max-width: 1219px;
     margin: 0 auto 100px;
 }
-.clothing__title{
+.clothing__title {
     font-family: "Core Sans C", sans-serif;
-    color: #3C4242;
+    color: #3c4242;
     font-size: 28px;
     font-weight: 600;
     line-height: 1.2;
     letter-spacing: 0.56px;
     margin-bottom: 30px;
 }
-.clothing__subtitle{
-    color: #807D7E;
+.clothing__subtitle {
+    color: #807d7e;
     font-family: "Core Sans C", sans-serif;
     font-size: 20px;
     font-weight: 600;
@@ -153,8 +153,8 @@ p{
     letter-spacing: 0.4px;
     margin-bottom: 25px;
 }
-.clothing__text p{
-    color: #807D7E;
+.clothing__text p {
+    color: #807d7e;
     font-family: "Causten";
     font-size: 20px;
     font-weight: 400;
@@ -162,7 +162,7 @@ p{
     letter-spacing: 0.4px;
     margin-bottom: 20px;
 }
-.clothing__text{
+.clothing__text {
     margin-bottom: 25px;
 }
 
@@ -171,14 +171,14 @@ p{
     margin: 0 auto 100px;
     max-width: 1110px;
 }
-.jewellery__content{
+.jewellery__content {
     font-family: "Cormorant Infant";
     font-weight: 700;
     display: inline-block;
     margin-right: 75px;
 }
 .jewellery__subtitle {
-    color: #D58417;
+    color: #d58417;
     font-size: 20px;
     text-transform: uppercase;
     font-family: "Cormorant Infant";
@@ -196,9 +196,9 @@ p{
     max-width: 489px;
     color: #606060;
     font-size: 30px;
-    line-height: 1.4
+    line-height: 1.4;
 }
-.jewellery__image{
+.jewellery__image {
     display: inline-block;
     max-width: 525px;
     vertical-align: top;
@@ -224,7 +224,7 @@ p{
 }
 .article__title,
 .article__subtitle,
-.article__lead{
+.article__lead {
     font-family: "Open sans", sans-serif;
     font-weight: 700;
     margin-bottom: 30px;
@@ -239,13 +239,13 @@ p{
     text-shadow: 3px 5px 5px rgb(200, 191, 140), 5px 7px 5px rgb(55, 41, 82);
     margin-bottom: 50px;
 }
-.article__subtitle{
+.article__subtitle {
     font-size: 40px;
 }
-.article__lead{
+.article__lead {
     font-size: 30px;
 }
-.article [alt]{
+.article [alt] {
     border-radius: 50%;
     border: 10px double red;
     box-shadow: 5px 15px 15px blueviolet;
@@ -277,7 +277,7 @@ p{
     margin-bottom: 35px;
     list-style: square;
 }
-.article__list a{
+.article__list a {
     text-decoration: underline;
     font-weight: 500;
     font-style: italic;
@@ -285,6 +285,4 @@ p{
     color: crimson;
     opacity: 0.9;
     text-shadow: 3px 5px 10px#606060;
-
-    
 }
