--- a/lesson_9/css/style.css
+++ b/lesson_9/css/style.css
@@ -2,15 +2,28 @@
 @import url(reset.css);
 @import url(btn.css);
 
+html,
 body {
+    height: 100%;
     font-family: "Inter", sans-serif;
     font-size: 18px;
     color: #7d7d7d;
     width: auto;
 }
+.wraper {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.main {
+    flex: 1 1 auto;
+}
 .container {
     max-width: 1440px;
     margin: 0 auto;
+}
+.header__wrapper {
+    margin-bottom: 50px;
 }
 .header__wrapper,
 .footer__wrapper {
@@ -19,7 +32,6 @@ body {
     background: url(../img/repeat.jpg) 0 0 / cover;
     text-align: center;
     padding: 5px;
-    margin-bottom: 50px;
 }
 .footer__wrapper {
     margin-top: 50px;
@@ -172,15 +184,14 @@ body {
 .second__list {
     margin-bottom: 48px;
     padding: 28px 41px 28px 39px;
-  }
-   .list__second-body {
-     border: 1px solid #E3E3E3;
-
-   }
-  .second__list li:not(:last-child) {
+}
+.list__second-body {
+    border: 1px solid #e3e3e3;
+}
+.second__list li:not(:last-child) {
     margin-bottom: 31px;
-  }
-  .list__title {
+}
+.list__title {
     font-size: 20px;
     font-weight: 600;
     margin-bottom: 12px;
@@ -190,17 +201,17 @@ body {
     line-height: 146.187%; /* 26.314px */
 }
 .second__btn {
-  width: 200px;
-  height: 65px;
-  color: #fff;
-  text-align: center;
-  font-weight: 600;
-  text-transform: capitalize;
-  background: #6B77E5;
-  transition:  0.5s ease;
+    width: 200px;
+    height: 65px;
+    color: #fff;
+    text-align: center;
+    font-weight: 600;
+    text-transform: capitalize;
+    background: #6b77e5;
+    transition: 0.5s ease;
 }
 .second__btn:hover {
-  background: #40ddb6;
+    background: #40ddb6;
 }
 /* ============================== */
 
