--- a/lesson_9/css/style.css
+++ b/lesson_9/css/style.css
@@ -18,6 +18,7 @@ body {
 .main {
     flex: 1 1 auto;
 }
+
 .container {
     max-width: 1440px;
     margin: 0 auto;
@@ -69,6 +70,11 @@ body {
     font-weight: 600;
     line-height: 127%; /* 38.1px */
     margin-bottom: 4px;
+}
+.sub-title {
+    color: #37393f;
+    font-weight: 500;
+    margin-bottom: 16px;
 }
 .text {
     line-height: 146.187%; /* 26.314px */
@@ -154,12 +160,9 @@ body {
     max-width: 680px;
     margin: 0 auto;
 }
-.second__sub-title {
-    color: #37393f;
-    font-weight: 500;
-    margin-bottom: 16px;
-}
-.second__sub-title::before {
+
+.second__sub-title::before,
+.third__sub-title::before {
     content: "";
     display: inline-block;
     width: 12px;
@@ -167,7 +170,8 @@ body {
     background-color: #40ddb6;
     margin-right: 6px;
 }
-.second__title {
+.second__title,
+.third__title {
     color: #37393f;
     font-family: "Poppins";
     font-size: 40px;
@@ -183,10 +187,10 @@ body {
 }
 .second__list {
     margin-bottom: 48px;
-    padding: 28px 41px 28px 39px;
 }
 .list__second-body {
     border: 1px solid #e3e3e3;
+    padding: 28px 41px 28px 39px;
 }
 .second__list li:not(:last-child) {
     margin-bottom: 31px;
@@ -199,6 +203,7 @@ body {
 .list__text {
     color: #7d7d7d;
     line-height: 146.187%; /* 26.314px */
+    margin-left: 38px; /* ширина іконки + її margin */
 }
 .second__btn {
     width: 200px;
@@ -229,3 +234,81 @@ body {
     display: block;
 }
 /* ============================== */
+.third {
+    text-align: center;
+    margin: 0 auto;
+}
+.third__info {
+    text-align: center;
+}
+.block-3 {
+}
+.third__sub-title {
+}
+.sub-title {
+}
+.third__title {
+    margin-bottom: 77px; /* 41+ половина icon */
+}
+.third__box {
+}
+.box__item:hover {
+    box-shadow: 0 0.8em 0.8em -0.4em #40ddb6;
+    transform: translateY(-0.25em);
+}
+.box__item.center:hover {
+    box-shadow: 0 0.8em 0.8em -0.4em #6b77e5;
+}
+.box__item {
+    max-width: 386px;
+    display: inline-block;
+    background: #f4f4f4;
+    padding: 58px 43px;
+    transition: 0.25s;
+}
+.box__item::before {
+    content: "";
+    width: 72px;
+    height: 72px;
+    margin: -94px auto 36px;
+}
+.box__item.left::before {
+    background: url(../img/icons/Icon-1.svg) center/cover no-repeat;
+}
+.box__item.center::before {
+    background: url(../img/icons/Icon-2.svg) center/cover no-repeat;
+}
+.box__item.right::before {
+    background: url(../img/icons/Icon-3.svg) center/cover no-repeat;
+}
+.box__item p {
+    color: #7d7d7d;
+    text-align: center;
+    font-weight: 400;
+    line-height: 146.187%; /* 26.314px */
+    margin-bottom: 37px;
+}
+.box__item a {
+    color: #6b77e5;
+    text-align: center;
+    font-weight: 600;
+    text-transform: capitalize;
+    transition: letter-spacing 0.5s ease;
+}
+.box__item a:hover {
+    text-decoration-line: underline;
+    color: #40ddb6;
+    letter-spacing: 3px;
+}
+.box__item:not(:last-child) {
+    margin-right: 41px;
+}
+.box__item-title {
+    color: #37393f;
+    text-align: center;
+    font-family: "Poppins";
+    font-size: 25px;
+    font-weight: 600;
+    line-height: 127%; /* 31.75px */
+    margin-bottom: 16px;
+}
