--- a/lesson_9/css/btn.css
+++ b/lesson_9/css/btn.css
@@ -1,9 +1,7 @@
-/* Animate the size, inside */
 .fill:hover,
 .fill:focus {
     box-shadow: inset 0 0 0 2em var(--hover);
 }
-/* Animate the size, outside */
 .pulse:hover,
 .pulse:focus {
     animation: pulse 1s;
@@ -16,14 +14,29 @@
 }
 .close:hover,
 .close:focus {
-    box-shadow: inset -4.5em 0 0 0 var(--hover), inset 4.5em 0 0 0 var(--hover);
+    box-shadow: inset -4.5em 0 0 0 var(--hover), inset 3.5em 0 0 0 var(--hover);
 }
 .raise:hover,
 .raise:focus {
     box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
     transform: translateY(-0.25em);
 }
-/* Set button colors */
+.up:hover,
+.up:focus {
+    box-shadow: inset 0 -3.25em 0 0 var(--hover);
+}
+.slide:hover,
+.slide:focus {
+    box-shadow: inset 6.5em 0 0 0 var(--hover);
+}
+.offset {
+    box-shadow: 0.3em 0.3em 0 0 var(--color), inset 0.3em 0.3em 0 0 var(--color);
+
+    &:hover,
+    &:focus {
+        box-shadow: 0 0 0 0 var(--hover), inset 6em 3.5em 0 0 var(--hover);
+    }
+}
 .fill {
     --color: #a972cb;
     --hover: #ef6eae;
@@ -40,6 +53,24 @@
     --color: #ffa260;
     --hover: #ff994e;
 }
+.up {
+    --color: #e4cb58;
+    --hover: #fcdb8a;
+}
+.offset {
+    --color: #19bc8b;
+    --hover: #43cda5;
+}
+button {
+    color: var(--color);
+    transition: 0.25s;
+
+    &:hover,
+    &:focus {
+        border-color: var(--hover);
+        color: #fff;
+    }
+}
 .btn__header-item {
     color: var(--color);
     transition: 0.25s;
@@ -49,7 +80,6 @@
     border-color: var(--hover);
     color: #fff;
 }
-/* Basic button styles */
 .btn__header-item {
     display: inline-block;
     background: none;
@@ -59,4 +89,7 @@
     margin: 0.5em;
     padding: 1em 2em;
 }
-
+code {
+    color: #e4cb58;
+    font: inherit;
+}
