added header and footer

--- a/lesson_12/css/style.css
+++ b/lesson_12/css/style.css
@@ -10,153 +10,148 @@ body {
     width: auto;
 }
 .wraper {
-    /* max-width: 1440px; */
+    overflow: clip;
     min-height: 100%;
-    display: flex;
-    flex-direction: column;
+    position: relative;
 }
 .main {
-    flex: 1 1 auto;
 }
 [class*="__container"] {
-    max-width: 1237px;
+    max-width: 1200px;
     margin: 0 auto;
 }
-/* ============================== */
-.header {
-    border-bottom: 1px solid #bebcbd;
-}
+/* ========================================== */
 .footer {
-    padding: 59px 0 59px 79px;
-    background-color: #2a2f2f;
-    color: #f6f6f6;
+    background-color: #2c2d2d;
+    position: fixed;
+    width: 100%;
+    top: 87%;
+    left: 0;
 }
-.menu-footer__block {
-    vertical-align: top;
+.contacts {
+    text-align: center;
+    padding: 10px;
 }
-.search__input {
-    border-radius: 8px;
-    background: #f6f6f6;
+.contacts__title {
+    color: #c0bdbd;
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 10px;
 }
-.search__input::placeholder {
-    padding-left: 10px;
+.contacts__list {
+    text-align: center;
 }
-.search__icon {
-    background: url(../img/header/icons/search.svg) center/contain no-repeat;
-    width: 20px;
-    height: 20px;
-    padding-left: 20px;
-}
-.menu-footer__block {
+.contacts__item {
     display: inline-block;
 }
-.menu-footer__block:not(:last-child) {
-    margin-right: 80px;
+.contacts__item:not(:last-child) {
+    margin-right: 15px;
 }
-.menu-footer__title {
-    font-size: 28px;
-    margin-bottom: 15px;
+.contacts__link {
+    overflow: hidden;
 }
-.menu-footer__link {
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 216.9%; /* 39.042px */
+.contacts__link img {
+    width: 40px;
+    height: 40px;
+    margin: 5px;
+    transition: 0.25s;
 }
-.info-footer__title {
-    font-size: 28px;
-    font-weight: 700;
+.contacts__link:hover img {
+    transform: translateY(-0.25em);
 }
-.social__item {
-    display: inline-block;
+/* ========================================== */
+.header {
+    background-color: #2c2d2d;
 }
-.feedback {
-    display: flex;
+.header__body {
+    text-align: center;
+    padding: 10px;
+    position: relative;
 }
-.size__list {
-    display: flex;
+.header__logo {
+    float: left;
 }
-.size__item {
-    width: 38px;
-    height: 38px;
-    border-radius: 12px;
-    border: 1.5px solid #bebcbd;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-}
-.size__item:active {
-    background-color: #3c4242;
-}
-.size__item:not(:last-child) {
-    margin-right: 20px;
-}
-.feedback__item {
-    display: inline-block;
-}
-.color__list {
-    display: flex;
-}
-.color__item--first::before,
-.color__item--second::before,
-.color__item--third::before,
-.color__item--fourth::before {
-    content: "";
-    width: 30px;
-    height: 30px;
+.header__logo::before {
+    content: "Logo";
+    width: 40px;
+    height: 40px;
+    background-color: #dad7d5;
     border-radius: 50%;
-    cursor: pointer;
-}
-.color__item:not(:last-child) {
-    margin-right: 20px;
-}
-.color__item--first::before {
-    background-color: #3c4242;
-}
-.color__item--second::before {
-    background-color: #edd146;
-}
-.color__item--third::before {
-    background-color: #eb84b0;
-}
-.color__item--fourth::before {
-    background-color: #9c1f35;
-}
-.button-center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    column-gap: 10px;
-    cursor: pointer;
-}
-.button-violet {
-    border-radius: 8px;
-    background: #8a33fd;
-    padding: 12px 40px;
-    color: #fff;
-    text-align: center;
-    font-weight: 600;
-}
-.cart {
-    display: flex;
-}
-.cart__price {
-    display: flex;
-    padding: 12px 40px;
-    justify-content: center;
-    align-items: center;
 
-    width: 138px;
-    color: #3c4242;
+    position: relative;
+    color: #2c2d2d;
+    font-size: 14px;
     text-align: center;
-    font-weight: 700;
-
-    border-radius: 8px;
-    border: 1px solid #3c4242;
+    line-height: 40px;
 }
-.item-products__info span::before {
-    content: "";
-    background: url(../img/main/icons/icon-like.svg);
-    width: 32px;
-    height: 32px;
+.menu {
+    display: inline-block;
+}
+.menu__item {
+    display: inline-block;
+    position: relative;
+}
+.menu__item:hover .menu__link {
+    background-color: #8d8b8a;
+    color: #f0eeed;
+}
+.menu__item:hover .sub-menu {
+    visibility: visible;
+}
+.menu__item:not(:last-child) {
+    margin-right: 30px;
+}
+.menu__link {
+    display: inline-block;
+    background-color: #dad7d5;
+    padding: 10px;
+}
+.sub-menu {
+    position: absolute;
+    padding-top: 10px;
+    left: -8px; /* враховую відступ зліва та бордор, щоб вирівняти бордер випадаючого меню з головною кнопкою*/
+    top: 100%;
+    min-width: 130px;
+    background-color: #2c2d2d;
+    visibility: hidden;
+}
+.sub-menu__item {
+    position: relative;
+    margin-bottom: 10px;
+    color: #f0eeed;
+}
+.sub-menu__item:hover .sub-sub-menu {
+    visibility: visible;
+}
+.sub-menu__link {
+    border: 2px solid #c0bdbd;
+    padding: 5px;
+}
+.menu__link:hover,
+.sub-menu__link:hover,
+.sub-sub-menu__link:hover {
+    text-decoration: underline;
+}
+.sub-sub-menu {
+    position: absolute;
+    left: 100%;
+    top: -5px;
+    background-color: #2c2d2d;
+    visibility: hidden;
+}
+.sub-sub-menu__item {
+    width: 160px;
+    position: relative;
+    margin-bottom: 10px;
+}
+.sub-sub-menu__item:first-child {
+    padding-top: 5px;
+}
+.sub-sub-menu__item:last-child {
+    margin-bottom: 5px;
+}
+.sub-sub-menu__link {
+    color: #f0eeed;
+    border: 2px solid #c0bdbd;
+    padding: 5px;
 }
