--- a/lesson_12/css/style.css
+++ b/lesson_12/css/style.css
@@ -17,13 +17,13 @@ body {
 .main {
 }
 [class*="__container"] {
-    max-width: 1200px;
+    max-width: 1220px;
     margin: 0 auto;
 }
 /* ========================================== */
 .footer {
     background-color: #2c2d2d;
-    position: fixed;
+    /* position: fixed; */
     width: 100%;
     top: 87%;
     left: 0;
@@ -61,6 +61,11 @@ body {
 }
 /* ========================================== */
 .header {
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 50;
     background-color: #2c2d2d;
 }
 .header__body {
@@ -156,3 +161,122 @@ body {
     padding: 5px;
 }
 /* ========================================== */
+.main {
+}
+.main__container {
+}
+.team {
+    max-width: 1220px;
+    font-size: 0;
+    margin: 50px 0;
+}
+.team__cart {
+}
+.cart {
+    position: relative;
+    display: inline-block;
+    max-width: 386px;
+}
+.cart:not(:nth-child(3n + 3)) {
+    margin-right: 31px;
+}
+.cart:nth-child(1),
+.cart:nth-child(2),
+.cart:nth-child(3) {
+    margin-bottom: 31px;
+}
+.cart:hover .social {
+    visibility: visible;
+}
+.cart__image {
+    position: relative;
+    display: inline-block;
+}
+.cart__image img {
+    max-width: 100%;
+}
+.cart__image::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    background-color: rgba(107, 119, 229, 0.7);
+}
+.cart:hover .cart__image::before {
+    opacity: 0.5;
+}
+.cart__social {
+}
+.social {
+    position: absolute;
+    top: 241px;
+    left: 107.5px;
+    z-index: 1;
+    height: auto;
+    font-size: initial;
+    visibility: hidden;
+}
+.social__link:hover {
+    box-shadow: 0 0 5px #fff;
+    border-radius: 50%;
+}
+.social__link img {
+    width: 50px;
+    height: 50px;
+}
+.social__link:not(:last-child) {
+    margin-right: 13px;
+}
+.info-cart {
+    position: absolute;
+    bottom: 22px;
+    left: 22px;
+    width: 341px;
+    background-color: #fff;
+    padding: 24px 47px;
+}
+.info-cart__title {
+    color: #37393f;
+    text-align: center;
+    font-family: "Poppins";
+    font-size: 25px;
+    font-weight: 600;
+    white-space: nowrap;
+}
+.info-cart__title:not(:last-child) {
+    margin-bottom: 4px;
+}
+.info-cart__position {
+    color: #7d7d7d;
+    text-align: center;
+    font-family: "Inter";
+    font-size: 18px;
+    line-height: 135.187%; /* 24.334px */
+}
+/* ==================================== */
+.sticky-blocks {
+    margin-bottom: 50px;
+}
+.block__title {
+    position: sticky;
+    left: 0;
+    top: 50px;
+
+    min-width: 100%;
+    font-size: 30px;
+    padding: 10px;
+    text-align: center;
+    background-color: #37393f;
+    color: #f0eeed;
+    line-height: 135%;
+}
+.block__text {
+    font-size: 22px;
+    max-width: 1220px;
+    margin: 0 auto;
+    padding: 15px 0;
+    text-align: justify;
+}
