--- a/lesson_12/css/style.css
+++ b/lesson_12/css/style.css
@@ -110,6 +110,10 @@ body {
     display: inline-block;
     background-color: #dad7d5;
     padding: 10px;
+
+    color: #37393F;
+
+font-weight: 600;
 }
 .sub-menu {
     position: absolute;
@@ -203,10 +207,10 @@ body {
     width: 100%;
     height: 100%;
     opacity: 0;
-    background-color: rgba(107, 119, 229, 0.7);
+    background-color: rgba(107, 119, 229);
 }
 .cart:hover .cart__image::before {
-    opacity: 0.5;
+    opacity: 0.7;
 }
 .cart__social {
 }
