--- a/lesson_12/css/style.css
+++ b/lesson_12/css/style.css
@@ -110,10 +110,8 @@ body {
     display: inline-block;
     background-color: #dad7d5;
     padding: 10px;
-
-    color: #37393F;
-
-font-weight: 600;
+    color: #37393f;
+    font-weight: 600;
 }
 .sub-menu {
     position: absolute;
