--- a/lesson_13/css/style.css
+++ b/lesson_13/css/style.css
@@ -144,6 +144,7 @@ body {
 .car__body {
 }
 
+.wheel__rubber {}
 .wheel__rubber::before,
 .wheel__rubber::after {
     content: "";
@@ -154,14 +155,20 @@ body {
 .wheel__rubber::before {
     width: 200px;
     height: 200px;
-    top: 45%;
-    left: 150px;
+    bottom: -75px;
+    left: -100px;
 }
 .wheel__rubber::after {
     width: 150px;
     height: 150px;
-    top: 65%;
-    right: 150px;
+    bottom: -75px;
+    right: -75px;
+}
+.wheel__disk {
+    position: relative;
+    z-index: 1;
+    width: 800px;
+    height: 150px;
 }
 .wheel__disk::before,
 .wheel__disk::after {
@@ -170,18 +177,25 @@ body {
     border-radius: 50%;
     border: 4px solid rgb(102, 102, 102);
     background-color: rgb(226, 226, 226);
+
 }
 .wheel__disk::before {
     width: 150px;
     height: 150px;
-    left: 175px;
-    top: 57%;
+    left: -75px;
+    bottom: -100px;
 }
 .wheel__disk::after {
     width: 100px;
     height: 100px;
-    top: 77%;
-    right: 175px;
+    right: -50px;
+    bottom: -100px;
+}
+.wheel__disk--bolt {
+    z-index: 2;
+    position: relative;
+    width: 800px;
+    height: 40px;
 }
 .wheel__disk--bolt::before,
 .wheel__disk--bolt::after {
@@ -193,22 +207,38 @@ body {
 .wheel__disk--bolt::before {
     width: 40px;
     height: 40px;
-    left: 230px;
-    top: 85%;
+    left: -20px;
+    bottom: -5px;
 }
 .wheel__disk--bolt::after {
     width: 20px;
     height: 20px;
-    right: 215px;
-    top: 97%;
+    right: -10px;
+    bottom: -20px;
 }
-
-.car__disk-elements {
+.wheel {
+    position: relative;
+    width: 800px;
+    height: 200px;
+    left: 200px;
+}
+.wheel__disk--elements {
+    /* position: relative; */
 }
 .element-disk {
 }
 .element-disk__item {
+    position: absolute;
+    width: 30px;
+    height: 40px;
+    top: 0;
+    left: 0;
+    background-color: #000;
+    border-radius: 50% 50% 50% 50% / 20% 20% 80% 80%;
 }
-
+.element-disk__item:nth-child(1) {
+    top: 0;
+    left: 100px;
+}
 .car__glass {
 }
