--- a/lesson_13/css/style.css
+++ b/lesson_13/css/style.css
@@ -146,7 +146,8 @@ body {
 .car__body {
 }
 
-.wheel__rubber {}
+.wheel__rubber {
+}
 .wheel__rubber::before,
 .wheel__rubber::after {
     content: "";
@@ -179,7 +180,6 @@ body {
     border-radius: 50%;
     border: 4px solid rgb(102, 102, 102);
     background-color: rgb(226, 226, 226);
-
 }
 .wheel__disk::before {
     width: 150px;
@@ -288,10 +288,10 @@ body {
 }
 .details__glass {
     position: absolute;
-    top: -65px;
+    top: -25px;
     left: 700px;
-    width: 100px;
-    height: 120px;
+    width: 60px;
+    height: 80px;
     background-color: rgba(163, 169, 173, 0.237);
     border-radius: 13% 89% 100% 0% / 0% 100% 16% 80%;
     overflow: visible;
@@ -303,7 +303,76 @@ body {
     width: 300px;
     height: 180px;
     background-color: rgba(163, 169, 173, 0);
-    border-radius: 100% 3% 0% 17% / 9% 100% 100% 80% ;
-    border: 1px solid #000 ;
+    border-radius: 100% 3% 0% 17% / 9% 100% 100% 80%;
+    border: 1px solid #000;
     overflow: hidden;
 }
+.details__door::after,
+.details__door::before {
+    content: "";
+    position: absolute;
+    border-radius: 10px;
+}
+.details__door::before {
+    width: 35px;
+    height: 6px;
+    top: 80px;
+    left: 15px;
+    background-color: #000;
+}
+.details__door::after {
+    width: 25px;
+    height: 1px;
+    top: 82px;
+    left: 20px;
+    background-color: #f0eded6e;
+}
+.details__lights {
+    position: absolute;
+    width: 100px;
+    height: 40px;
+    top: 100px;
+    right: 50px;
+    background-color: rgb(34, 58, 74);
+    border-radius: 100% 0% 0% 100% / 0% 100% 0% 100%;
+}
+.details__lights:before {
+    content: "";
+    position: absolute;
+    width: 200px;
+    height: 75px;
+    top: -10px;
+    left: 70px;
+    background-color: rgb(211, 179, 19);
+    border-radius: 100% 0% 0% 100% / 45% 0% 0% 45%;
+    transform: rotate(6deg);
+}
+.details__lights:after {
+    content: "";
+    position: absolute;
+    width: 80px;
+    height: 40px;
+    top: -70px;
+    left: -1020px;
+    background-color: rgb(211, 70, 19);
+    border-radius: 93% 8% 8% 14% / 80% 15% 15% 20%;
+}
+.car__white-bg {
+    position: absolute;
+    width: 300px;
+    height: 55px;
+    top: 0px;
+    left: 400px;
+
+    background-color: #ffffff;
+}
+/* .car__rudder {
+    background: url(../img/main/car__rudder.png) no-repeat;
+    background-size: cover;
+    position: absolute;
+    width: 70px;
+    height: 70px;
+    top: -12px;
+    left: 650px;
+    transform: rotateY(80deg);
+} */
