--- a/lesson_15/css/style.css
+++ b/lesson_15/css/style.css
@@ -28,7 +28,6 @@ body {
 .header {
 }
 .header__container {
-    /* position: relative; */
     display: flex;
     justify-content: space-between;
     padding: 34px 100px 31px;
@@ -49,15 +48,27 @@ body {
     padding: 12px 48px;
     border-radius: 8px;
     background: #f6f6f6;
-    color: #807d7e;
+    transition: max-width 0.5s;
 }
 .search__input {
     background-color: transparent;
     min-height: 22px;
     width: 100%;
-    /* margin-left: 12px; */
+    transition: width 0.5s;
+    padding-left: 10px; 
 }
-
+.search__input::placeholder {
+    color: #807D7E;
+    padding-left: 5px;
+}
+.search__input:focus-visible {
+    outline: 1px solid #807d7e;
+    border-radius: 4px;
+    width: 150%;
+}
+.header__search:focus-within {
+    max-width: 250px;
+}
 .header__languages {
     position: relative;
     display: inline-block;
@@ -65,7 +76,6 @@ body {
     min-width: 206px;
     color: #333;
 }
-
 .header__languages::before {
     content: "▼";
     position: absolute;
@@ -102,48 +112,6 @@ body {
 .header__languages:hover::before {
     transform: translateY(-50%) rotate(180deg);
 }
-
-/* .header__btn {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.button:not(:last-child) {
-    margin-right: 29px;
-}
-.button {
-    display: inline-flex;
-    padding: 12px 48px;
-    justify-content: center;
-    align-items: center;
-    border-radius: 8px;
-    color: #fff;
-    text-align: center;
-    font-weight: 500;
-}
-
-.button--purple {
-    background: #8a33fd;
-}
-
-.button--border {
-    border: 1px solid #3C4242;
-    color: #8A33FD;
-}
-
-.button--border:hover,
-.button--border:hover .button--purple {
-    background: #8a33fd;
-    color: #fff;
-    border: 1px solid #fff;
-}
-
-.button.active {
-      background: #8a33fd;
-      color: #fff;
-      border: 1px solid #fff;
-    }
- */
 .button {
     display: inline-flex;
     padding: 12px 48px;
@@ -154,6 +122,9 @@ body {
     text-align: center;
     font-weight: 500;
     transition: background-color 0.3s ease, border 0.3s, color 0.3s;
+}
+.button:not(:last-child) {
+    margin-right: 29px;
 }
 .button--purple,
 .button--border {
