--- a/lesson_15/css/style.css
+++ b/lesson_15/css/style.css
@@ -140,6 +140,9 @@ body {
 /* =========================== */
 .main__container {
 }
+.sticky-categories {
+    margin-bottom: 70px;
+}
 .sticky-categories,
 .sticky-wishlist,
 .sticky-orders {
@@ -156,7 +159,6 @@ body {
     letter-spacing: 0.68px;
     background-color: #fff;
     width: 100%;
-    margin-bottom: 70px;
     min-height: 40px;
     display: flex;
     align-items: center;
@@ -184,13 +186,10 @@ body {
 }
 .cart {
     cursor: pointer;
-    max-width: 270px;
+    max-width: 274px;
 }
 .cart:not(:last-child) {
     margin-bottom: 50px;
-}
-.cart:not(:last-child) {
-    padding-right: 15px;
 }
 .cart__container-image {
     position: relative;
@@ -199,21 +198,23 @@ body {
 .cart__image {
     border: 10px;
     margin-bottom: 16px;
-    max-width: 270px; 
+    max-width: 270px;
 
     height: auto;
-     transition: transform 0.3s, box-shadow 0.3s;
+    transition: transform 0.3s ease-in-out 0s, box-shadow 0.3s;
 }
 .cart__container-image:hover {
     border-radius: 10px;
 }
 .cart__container-image:hover .cart__image {
-    transform: scale(1.2); 
+    transform: scale(1.2);
     box-shadow: 0 0 0 10px rgba(0, 0, 0, 0.5);
 }
 .cart__image img {
     width: 100%;
+    object-fit: cover;
 }
+
 .cart__info {
     position: relative;
     width: 100%;
@@ -247,4 +248,88 @@ body {
     letter-spacing: -0.536px;
 }
 .orders {
+}
+/* ========================= */
+.sticky-wishlist {
+    margin-bottom: 20px;
+}
+.wishlist {
+    width: 100%;
+}
+.wishlist:not(:last-child) {
+    margin-bottom: 100px;
+}
+.wishlist__cart {
+}
+.cart-wishlist {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    border-bottom: 1px solid #EDEEF2;
+    padding: 30px 0;
+    transition: background-color 0.3s;
+}
+.cart-wishlist:hover {
+    background-color: #EDEEF2;
+}
+.cart-wishlist__image {
+    width: 110px;
+    position: relative;
+    /* width: 100%; */
+    margin-left: 58px;
+}
+.cart-wishlist__image::before {
+    content: "";
+    position: absolute;
+    width: 22px;
+    height: 22px;
+    top:50%;
+    left: -47px;
+    background: url(../img/icons/close-cross.svg) no-repeat;
+    transform: translate(-50%, -50%);
+}
+.cart-wishlist__image img {
+    width: 100%;
+}
+.cart-wishlist__info {
+    display: flex;
+    gap: 36px;
+}
+.cart-wishlist__details {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 110px;
+
+    color: #3c4242;
+    font-family: "Causten";
+    font-size: 22px;
+    font-weight: 700;
+    letter-spacing: 0.44px;
+}
+.cart-wishlist__title {
+}
+.cart-wishlist__color span,
+.cart-wishlist__quantit span {
+    color: #807d7e;
+    font-weight: 400;
+    font-size: 22px;
+}
+.cart-wishlist__quantit {
+}
+.cart-wishlist__buy {
+    display: flex;
+    align-items: center;
+    gap: 50px;
+}
+.cart-wishlist__price {
+    color: #807D7E;
+font-size: 22px;
+font-weight: 700;
+letter-spacing: 0.44px;
+}
+
+.cart-wishlist__price:hover {
+    background-color: #7420e1;
 }
